css fix for sleep timer buttons on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -340,7 +340,7 @@ noscript a, noscript a:visited {
     flex-wrap: wrap;
     justify-content: center;
 }
-#channelScheduleLinks .menuButton, #visualiserList .menuButton {
+#channelScheduleLinks .menuButton, #visualiserList .menuButton, #sleepTimerButtons .menuButton {
     text-transform: capitalize;
     margin: 5px 3px;
     cursor: pointer;
